Add bg-blue-gray-900 to pre

--- a/pages/styles/tailwind.css
+++ b/pages/styles/tailwind.css
@@ -28,7 +28,7 @@
   }
 
   pre {
-    --background: hsla(206 12% 89.5% / 5%);
+    --background: rgba(17, 24, 39, 1);
     --text: var(--colors-white);
     --syntax1: var(--colors-orange);
     --syntax2: var(--colors-turq);
