Change $4 to 16px

--- a/pages/styles/tailwind.css
+++ b/pages/styles/tailwind.css
@@ -107,8 +107,8 @@
     .token.deleted:not(.prefix),
     .token.inserted:not(.prefix) {
       display: block;
-      px: $4;
-      mx: -$4;
+      px: 16px;
+      mx: -16px;
     }
 
     .token.deleted:not(.prefix) {
